<resources>
    //login strings
    <string name="app_name">My Application</string>
    <string name="app"> 24/7 Health Care</string>
    <string name="login"> Login Please</string>
    <string name="username">  User Name </string>
    <string name="password">  Password </string>
    <string name="log">LOgIn</string>
    <string name="bottom"> Register for New User</string>
    <string name="confirm_password"> Confirm Password</string>
    <string name="homeappname"> 24/7  Health Care </string>

    // Register Strings
    <string name="Register_register"> Registration </string>
    <string name="Register_email"> E-Mail </string>
    <string name="Register_mobile"> Phone Number </string>
    <string name="Register"> R E G I S T E R </string>
    <string name="register_bottom">  Already have an account? </string>

    // Home Activity Strings
    <string name="labtest"> Lab Test </string>
    <string name="buymedicine"> Buy Medicine </string>
    <string name="finddoctor"> Find Doctor </string>
    <string name="healtharticle"> Health Article </string>
    <string name="orderdetail"> Order Details </string>
    <string name="blood"> Blood Donar </string>
    <string name="exit"> E X I T </string>
    <string name="four"> 4 </string>

    // Find Doctor
    <string name="top_doctor"> T o p  D o c t o r s </string>
    <string name="family_physicain"> Family Physician </string>
    <string name="dentist"> Dentist </string>
    <string name="surgeon"> Surgeon </string>
    <string name="heart_specialist"> Heart Specialist </string>
    <string name="venereologist"> venereologist </string>
    <string name="dietician"> Dietician </string>

    // activity doctor details
    <string name="defeault_text"> D e f e u l t   T e x t </string>

    // New user
    <string name="welcome_to"> Welcome to </string>
    <string name="regular_user"> Regular User </string>
    <string name="doctor"> Doctor </string>
    <string name="blood_doner"> Blood Doner </string>
    <string name="choice_a_option"> Choice a Option </string>
    <string name="normal_user"> Normal User </string>
    <string name="medicine_shop"> Medicine Shopowner </string>

    //Activity Doctor Register
    <string name="Doctor_Categoary"> Doctor Category </string>
    <string name="doctor_register"> Doctor Register </string>
    <string name="choice_photo"> Choice Your Photo </string>
    <string name="doctor_chember"> Doctor Chember </string>
    <string name="schedule_of_doctor"> Schedule of Doctor </string>
    <string name="get_service_from"> Get Service From </string>


    //Blood Doner
    <string name="thanks"> Thanks for </string>
    <string name="donating">DONATING BLOOD</string>
    <string name="blood_doner_registration">Blood Donor Registration </string>
    <string name="last_donation"> Last Donation </string>
    <string name="mobile"> Mobile </string>
    <string name="blood_group"> Blood Group </string>

    //Buy Medicine
    <string name="title_text_buy_medicine_details">        To confirm order,     please provide the following information </string>
    <string name="confirm_order_buy_medicine_details"> CONFIRM ORDER </string>
    <string name="adress_buy_medicine_details">Address</string>

    // Book Apointment Details
    <string name="book_apointment"> Book Apointment </string>
    <string name="to_confirm"> Provide Required Information </string>
    <string name="confirm_appinment"> Confirm Appoinment </string>

</resources>