<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Register_Activity">

    <EditText
        android:id="@+id/doctor_category"
        android:layout_width="334dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/artifika"
        android:hint="@string/Doctor_Categoary"
        android:inputType="textVisiblePassword|textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_image" />

    <TextView
        android:id="@+id/choice_photo"
        android:layout_width="200dp"
        android:layout_height="33dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_for_dotor_select"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/choice_photo"
        android:textAlignment="center"
        android:textColor="#362FD9"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_bg"
        android:contextClickable="false"
        android:fontFamily="@font/artifika"
        android:freezesText="false"
        android:hint="@string/password"
        android:inputType="textVisiblePassword|textPassword"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_security_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/top_text"
        android:layout_width="391dp"
        android:layout_height="59dp"
        android:fontFamily="@font/croissant_one"
        android:text="@string/doctor_register"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="596dp"
        android:background="@drawable/input_bg"
        android:cursorVisible="false"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:fontFamily="@font/artifika"
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="317dp"
        android:layout_height="46dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/artifika"
        android:hint="@string/confirm_password"
        android:inputType="textVisiblePassword|textPassword"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_security_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_marginBottom="84dp"
        android:text="@string/Register"
        android:textColor="#B3005E"
        android:textStyle="bold"
        android:theme="@style/Platform.MaterialComponents.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="357dp"
        android:layout_height="40dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/register_bottom"
        android:textAlignment="center"
        android:textColor="#FFFAFA"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <ImageView
        android:id="@+id/doctor_image"
        android:layout_width="321dp"
        android:layout_height="208dp"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice_photo"
        app:srcCompat="@drawable/cardiologists" />

</androidx.constraintlayout.widget.ConstraintLayout>