<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Register_Activity">

    <EditText
        android:id="@+id/blood_group_blood_doner_registration"
        android:layout_width="283dp"
        android:layout_height="52dp"
        android:background="@drawable/input_bg"
        android:contextClickable="false"
        android:fontFamily="@font/artifika"
        android:freezesText="false"
        android:hint="@string/password"
        android:inputType="textVisiblePassword|textPassword"
        android:paddingTop="5dp"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_security_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_blood_doner_registration"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/top_text"
        android:layout_width="257dp"
        android:layout_height="86dp"
        android:fontFamily="@font/croissant_one"
        android:text="@string/app"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/amethysta"
        android:text="@string/Register_register"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <EditText
        android:id="@+id/username_blood_doner_registration"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/input_bg"
        android:cursorVisible="false"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:fontFamily="@font/artifika"
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text"
        app:layout_constraintVertical_bias="0.318" />

    <EditText
        android:id="@+id/phone_number_doctor_registration"
        android:layout_width="304dp"
        android:layout_height="51dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@android:drawable/stat_sys_phone_call"
        android:fontFamily="@font/artifika"
        android:hint="@string/Register_mobile"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:fontFamily="@font/artifika"
        android:hint="@string/Register_email"
        android:inputType="textWebEmailAddress"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_bood_donar_registration"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/mobile_bood_donar_registration"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/artifika"
        android:hint="@string/confirm_password"
        android:inputType="textVisiblePassword|textPassword"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_security_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_group_blood_doner_registration"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:id="@+id/register_blood_doner_registration"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_doctor_registration"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/already_have_an_account"
        android:layout_width="357dp"
        android:layout_height="40dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/register_bottom"
        android:textAlignment="center"
        android:textColor="#FFFAFA"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_blood_doner_registration" />

</androidx.constraintlayout.widget.ConstraintLayout>