<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".blood_donor_registration">

    <EditText
        android:id="@+id/blood_doner_registration_blood_doner_registration"
        android:layout_width="374dp"
        android:layout_height="99dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/bg_blood_doner_register"
        android:fontFamily="@font/amethysta"
        android:hint="@string/blood_doner_registration"
        android:inputType="textVisiblePassword|textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="1dp"
        android:textColor="#E21818"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/blood_group_blood_doner_registration"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:contextClickable="false"
        android:freezesText="false"
        android:hint="@string/blood_group"
        android:inputType="textVisiblePassword|textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_blood_doner_registration" />

    <EditText
        android:id="@+id/username_blood_doner_registration"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:cursorVisible="false"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_doner_registration_blood_doner_registration" />

    <EditText
        android:id="@+id/confirm_password_blood_doner_registration"
        android:layout_width="303dp"
        android:layout_height="56dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:cursorVisible="false"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:hint="@string/confirm_password"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_blood_doner_registration" />

    <EditText
        android:id="@+id/password_blood_doner_registration"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:cursorVisible="false"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_blood_doner_registration" />

    <EditText
        android:id="@+id/mobile_bood_donar_registration"
        android:layout_width="319dp"
        android:layout_height="51dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@android:drawable/stat_sys_phone_call"
        android:hint="@string/mobile"
        android:inputType="textVisiblePassword|textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_group_blood_doner_registration" />

    <EditText
        android:id="@+id/last_donation_blood_donar_registration"
        android:layout_width="312dp"
        android:layout_height="49dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:hint="@string/last_donation"
        android:inputType="textVisiblePassword|textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_bood_donar_registration" />

    <Button
        android:id="@+id/register_blood_doner_registration"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/Register"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:theme="@style/Platform.MaterialComponents.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_donation_blood_donar_registration" />

    <TextView
        android:id="@+id/already_have_an_account"
        android:layout_width="357dp"
        android:layout_height="40dp"
        android:text="@string/register_bottom"
        android:textAlignment="center"
        android:textColor="#FFFAFA"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_blood_doner_registration"
        app:layout_constraintVertical_bias="0.252" />

</androidx.constraintlayout.widget.ConstraintLayout>