<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".login_activity">

    <TextView
        android:id="@+id/appname"
        android:layout_width="273dp"
        android:layout_height="102dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="81dp"
        android:fontFamily="@font/croissant_one"
        android:text="@string/app"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/login"
        android:layout_width="165dp"
        android:layout_height="81dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="145dp"
        android:fontFamily="@font/amethysta"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/mobile_bood_donar_registration"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/artifika"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_security_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_blood_doner_registration"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/username_blood_doner_registration"
        android:layout_width="311dp"
        android:layout_height="59dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:fontFamily="@font/artifika"
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bolttom"
        android:layout_width="345dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="26dp"
        android:text="@string/bottom"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="142dp"
        android:layout_height="74dp"
        android:layout_marginTop="36dp"
        android:text="@string/log"
        android:textColor="#E31212"
        android:textSize="28sp"
        android:theme="@style/Platform.MaterialComponents.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_bood_donar_registration"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>